# multicamera_labelling_and_training

./: .gitignore  LICENSE  README.md  pyproject.toml
multicamera_labelling_and_training/: labelling_set_to_training_set.py  skeletons.py  video_to_labelling_set.py
notebooks/: 1.0-create-jarvis-labelling-set-from-recording.ipynb  2.0-create-COCO-trainingset-from-labellingset.ipynb  3.0-train-detection-model.ipynb  3.1-visualize-detection-results.ipynb  4.0-train-mmpose-model.ipynb  4.1-visualize-pose-model.ipynb
sample_data/labelling_sets/ExampleMouse-240101/: ExampleMouse-240101.yaml
sample_data/labelling_sets/ExampleMouse-240101/23-10-06-14-59-12-806366/FrontLeft/: annotations.csv
sample_data/labelling_sets/ExampleMouse-240101/23-10-06-14-59-12-806366/Top/: annotations.csv
sample_data/labelling_sets/ExampleMouse-240101/CalibrationParameters/: BackLeft.yaml  BackRight.yaml  Bottom.yaml  FrontLeft.yaml  FrontRight.yaml  Top.yaml
scripts/: train_mmdet.py  train_mmpose.py
