[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "multicamera_labelling_and_training"
version = "0.0.1"
description = "Training mmpose \u0026 mmdetection networks and labelling COCO pose data."
authors = [
  { name = "Tim Sainburg / Datta Lab" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["multicamera_labelling_and_training"]
force_sort_within_sections = true
